<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_scores_soccer"
        android:icon="@drawable/icon_man"
        android:title="@string/string_scores"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_live_soccer"
        android:icon="@drawable/icon_man"
        android:title="@string/string_live"
        android:enabled="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_favorites_soccer"
        android:icon="@drawable/icon_man"
        android:title="@string/string_favorites"
        android:enabled="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_menu_soccer"
        android:icon="@drawable/icon_man"
        android:title="@string/string_menu"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <!--<item-->
        <!--android:id="@+id/nav_news"-->
        <!--android:icon="@drawable/icon_android"-->
        <!--android:title="@string/string_news"-->
        <!--android:enabled="true"-->
        <!--app:showAsAction="ifRoom" />-->
    <!--<item-->
    <!--android:id="@+id/nav_refresh"-->
    <!--android:icon="@drawable/icon_android"-->
    <!--android:title="@string/string_refresh"-->
    <!--app:showAsAction="ifRoom" />-->
</menu>